--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.10",
+        "spatie/laravel-permission": "^5.5",
         "vdhicts/laravel-validation-rules": "^3.1"
     },
     "require-dev": {
